[metadata]
name = pyqmix
author =
    Lorenzo Alfine <lorenzo.alfine@gmail.com>
    Richard Höchenberger <richard.hoechenberger@gmail.com>
author_email = richard.hoechenberger@gmail.com
url = https://pyqmix.readthedocs.io/
project_urls =
    Source Code = https://github.com/psyfood/pyqmix/
    Bug Tracker = https://github.com/psyfood/pyqmix/issues/
license = GPL v3
description = A wrapper for the Cetoni Qmix SDK.
long_description= file: README.md, CHANGES.md, LICENSE
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
install_requires =
    cffi
    ruamel.yaml
    appdirs
    future; python_version < '3'

[versioneer]
VCS = git
style = pep440
versionfile_source = pyqmix/_version.py
versionfile_build =
tag_prefix = ''
