[metadata]
name = pyqmix
author =
    Lorenzo Alfine <lorenzo.alfine@gmail.com>
    Richard Höchenberger <richard.hoechenberger@gmail.com>
    Camilla Arndal Andersen <camilla@arndalandersen.dk>
author_email = richard.hoechenberger@gmail.com
url = https://pyqmix.readthedocs.io/
project_urls =
    Source Code = https://github.com/psyfood/pyqmix/
    Bug Tracker = https://github.com/psyfood/pyqmix/issues/
license = GPL v3
license_file = LICENSE
description = A wrapper for the Cetoni Qmix SDK.
long_description = file: README.md, CHANGES.md
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    cffi
    ruamel.yaml
    appdirs
    pypiwin32; platform_system == "Windows"
    future; python_version < '3'

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = pyqmix/_version.py
versionfile_build = pyqmix/_version.py
tag_prefix = ''
